--- a/src/app/lista-clienti/lista-clienti.component.html
+++ b/src/app/lista-clienti/lista-clienti.component.html
@@ -1,3 +1,8 @@
+<h1> Clients</h1>
+
 <div style="display: flex; justify-content: space-around; flex-wrap: wrap">
-  <app-cliente *ngFor="let c of clienti" [cliente]="c"> </app-cliente>
+  
+    <app-cliente *ngFor="let c of clienti" [cliente]="c">
+       </app-cliente>
+
 </div>
